--- a/petstore/petstoreapp/src/main/resources/application.yml
+++ b/petstore/petstoreapp/src/main/resources/application.yml
@@ -10,6 +10,8 @@ petstore:
       url: ${PETSTOREPRODUCTSERVICE_URL:http://localhost:8082}
     order:
       url: ${PETSTOREORDERSERVICE_URL:http://localhost:8083}
+    reserve-items:
+      url: ${PETSTORE_ORDER_ITEMS_RESERVER_URL:http://localhost:7071}
   logging:
     additional-headers-to-log: ${PETSTORE_ADDITIONAL_HEADERS_TO_LOG:}
     additional-headers-to-send: ${PETSTORE_ADDITIONAL_HEADERS_TO_SEND:}
