--- a/petstore/petstoreorderservice/pom.xml
+++ b/petstore/petstoreorderservice/pom.xml
@@ -29,6 +29,7 @@
         <jaxb.version>2.4.0-b180830.0359</jaxb.version>
         <azure.cosmos.version>4.41.0</azure.cosmos.version>
         <azure.servicebus.version>7.13.3</azure.servicebus.version>
+        <spring-cloud-azure.version>4.11.0</spring-cloud-azure.version>
         <lombock.version>1.18.24</lombock.version>
     </properties>
 
@@ -95,11 +96,16 @@
             <artifactId>jaxb-api</artifactId>
             <version>${jaxb.version}</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>com.azure</groupId>-->
-<!--            <artifactId>azure-cosmos</artifactId>-->
-<!--            <version>${azure.cosmos.version}</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>com.azure.spring</groupId>
+            <artifactId>spring-cloud-azure-starter</artifactId>
+            <version>${spring-cloud-azure.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.azure.spring</groupId>
+            <artifactId>spring-cloud-azure-starter-data-cosmos</artifactId>
+            <version>${spring-cloud-azure.version}</version>
+        </dependency>
 <!--        <dependency>-->
 <!--            <groupId>com.azure</groupId>-->
 <!--            <artifactId>azure-messaging-servicebus</artifactId>-->
