Module 8: Integration with Service Bus - Order Service (WebApp) and OrderItemsReserver (Function)

--- a/petstore/orderitemsreserver/pom.xml
+++ b/petstore/orderitemsreserver/pom.xml
@@ -32,7 +32,7 @@
         <functionAppRegion>eastus</functionAppRegion>
         <functionResourceGroup>learn-azure-temporal</functionResourceGroup>
         <functionAppServicePlanName>learn-azure-function-plan</functionAppServicePlanName>
-        <functionPricingTier>EP1</functionPricingTier>
+        <functionPricingTier>B1</functionPricingTier>
         <appInsights>petstore-app-insights</appInsights>
     </properties>
 
