--- a/petstore/petstoreorderservice/pom.xml
+++ b/petstore/petstoreorderservice/pom.xml
@@ -27,8 +27,6 @@
         <jackson.datatype.version>2.6.4</jackson.datatype.version>
         <junit.version>4.13.2</junit.version>
         <jaxb.version>2.4.0-b180830.0359</jaxb.version>
-        <azure.cosmos.version>4.41.0</azure.cosmos.version>
-        <azure.servicebus.version>7.13.3</azure.servicebus.version>
         <spring-cloud-azure.version>4.11.0</spring-cloud-azure.version>
         <lombock.version>1.18.24</lombock.version>
     </properties>
@@ -106,11 +104,11 @@
             <artifactId>spring-cloud-azure-starter-data-cosmos</artifactId>
             <version>${spring-cloud-azure.version}</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>com.azure</groupId>-->
-<!--            <artifactId>azure-messaging-servicebus</artifactId>-->
-<!--            <version>${azure.servicebus.version}</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>com.azure.spring</groupId>
+            <artifactId>spring-messaging-azure-servicebus</artifactId>
+            <version>${spring-cloud-azure.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
